examples/test/testpolicy15683.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15683
  namespace: namespace209
spec:
  podSelector:
    matchLabels:
      key31: value11
      key0: value26
      key25: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value31
          key30: value3
          key17: value35
      podSelector:
        matchLabels:
          key17: value41
          key22: value4
